yt widgets again

--- a/index.html
+++ b/index.html
@@ -104,13 +104,16 @@
                         <div><a class="btn btn-primary btn-lg px-4 me-sm-3" href="#jak-przekazac"></a> <a
                                 href="#jak-przekazac">Jak przekazać 1,5%?</a></div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="container px-5 my-5 text-center yt-widgets">
-            <div class="row">
-                <div class="">
-                    <iframe src="https://www.youtube-nocookie.com/embed/u6K4NzZ_uG4?si=CypM1Fraq6RCbwq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div class="yt-widgets">
+                        <div class="yt-widgets-row">
+                            <div class="">
+                                <iframe src="https://www.youtube-nocookie.com/embed/u6K4NzZ_uG4?si=CypM1Fraq6RCbwq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                            <div class="">
+                                <img src="./assets/banners/eugenia.png">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
